--- a/example.ipynb
+++ b/example.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "efffbb09",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "9b6092d3",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "8d4b7e84",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "b8c913e8",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "27640f83",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "fd160281",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "f69485f1",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "4a7f36c6",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "c19d4c1b",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "ca4f78c6",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "b6fc883e",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "9e80719d",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "05d342b9",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "1451ffc2",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "f2dc50c1",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "7ea540f6",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "af71c2f3",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "d6d2276a",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "9979840e",
    "metadata": {
     "scrolled": false
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15bb3cd2ff404ea89501c98cb34cd67d",
+       "model_id": "edcb7b3763c844dca7d50ef11146493b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "3bb4e15e",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "ad4be9c0",
    "metadata": {},
    "outputs": [],
@@ -436,9 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "9e69168e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# required names\n",
@@ -448,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "c022d5e6",
    "metadata": {
     "scrolled": true
@@ -460,9 +462,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "88e212bb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "classified = wrap_classification(ar_cl, thr2=0, thr3=0.2, thr4=0.3, thr5=0.6, numPts=100)"
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "8f5b9c0f",
    "metadata": {},
    "outputs": [],
@@ -481,26 +485,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "fec49ad1",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/f946380aa52149fc109c40bf3c3d3178-b5bac37fe7ba5caf23ec4574ba883d58:getPixels"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "video_args = {\n",
     "    'region': roi,\n",
@@ -517,24 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "0a3f0c73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/6331610e94e5fdb363a6ad77ab455000-8644c9195601c956ab6a09c0bcf75737:getPixels"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "video_args = {\n",
     "  'region': roi,\n",
@@ -550,24 +526,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ddb522f7",
-   "metadata": {},
-   "source": [
-    "<div style=\"display:flex\">\n",
-    "    <div style=\"flex:1;padding-right:10px;\">\n",
-    "        <img src=\"https://github.com/yiLuo374/geeRiverCl/blob/main/img/original.gif\" width=\"300\"/>\n",
-    "    </div>\n",
-    "    <div style=\"flex:1;padding-left:10px;\">\n",
-    "        <img src=\"https://github.com/yiLuo374/geeRiverCl/blob/main/img/classified.gif\" width=\"300\"/>\n",
-    "    </div>\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a770a339",
+   "id": "21ac24b4",
    "metadata": {},
    "outputs": [],
    "source": []
