--- a/example.ipynb
+++ b/example.ipynb
@@ -420,7 +420,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ar_f = open('arkansas.txt').read().split()"
+    "# IDs of images\n",
+    "f = 'arkansas.txt'\n",
+    "ar_f = open(f).read().split()"
    ]
   },
   {
@@ -430,6 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ID of the region of interest\n",
     "roi_id = \"users/luoyee1997/geeRiver/Arkansas/roi\"\n",
     "roi = load_file(roi_id)"
    ]
@@ -445,18 +448,7 @@
    "source": [
     "# required names\n",
     "bandnames_LS = ['Red', 'Green', 'Blue', 'NIR', 'SWIR1']\n",
-    "ar_cl = batch_load_LS(ar_f, bandnames_LS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "c022d5e6",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "ar_cl = batch_load_LS(ar_f, bandnames_LS)\n",
     "ar_cl = ar_cl.map(ref_cr)"
    ]
   },
@@ -474,23 +466,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f5b9c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Map = geemap.Map()\n",
-    "Map.addLayer(classified.first().clip(roi), {'min':1, 'max':3, 'palette': ['skyblue', 'sandybrown', 'green']}, 'classified')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "fec49ad1",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/f946380aa52149fc109c40bf3c3d3178-20ba835189413c50714e431745aa64fb:getPixels"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "video_args = {\n",
     "    'region': roi,\n",
@@ -507,10 +502,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "0a3f0c73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "[gif]https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/videoThumbnails/6331610e94e5fdb363a6ad77ab455000-82fff5f12cb512479b41022a33cb4cb8:getPixels"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "video_args = {\n",
     "  'region': roi,\n",
