--- a/example.ipynb
+++ b/example.ipynb
@@ -16,10 +16,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3b2f498",
+   "metadata": {},
+   "source": [
+    "# Centerline extraction & River/Sediment bar migration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f01b5cdf",
    "metadata": {},
    "source": [
-    "# Centerline extraction of the Tallahatchie River\n",
+    "## Centerline extraction of the Tallahatchie River\n",
     "This notebook provides an example of how to extract the centerline of river from remote sensing images. In this example, we are going to use the surface reflectance images provided by Landsat and PlanetScope. To concentrate on the workflow of centerline extraction, we have already upload images we need to assets of Google Earth Engine. However, users of Google Earth Engine can obtain Landsat collection directly. Instructions to upload Landsat images through Google Earth Engine is in [here](https://developers.google.com/earth-engine/datasets/catalog/LANDSAT_LC08_C02_T1_L2)."
    ]
   },
@@ -28,7 +36,7 @@
    "id": "db7d24d7",
    "metadata": {},
    "source": [
-    "# Import images\n",
+    "### Import images\n",
     "AssetIDs of images going to be uploaded are required and images should includes at least four bands: blue, green, red, and near-infrared, and the short-wave near-infrared band is also recommended to be included if avaliable. Names of these bands should be uniformed as 'Red', 'Green', 'Blue', 'NIR', 'SWIR1'."
    ]
   },
@@ -70,7 +78,7 @@
    "id": "2b3f9989",
    "metadata": {},
    "source": [
-    "# Obtain river mask from Landsat image\n",
+    "### Obtain river mask from Landsat image\n",
     "Comparing with PlanetScope, Landsat has lower resolution, which means lower computation. We use the Landsat image and the river mask obtained from it to filter out most unwanted water surfaces from the region of interest. In this section, we are going to\n",
     "1. Identify water surfaces.\n",
     "2. Identify the river from water surfaces.\n",
@@ -82,10 +90,8 @@
    "id": "f6c093d4",
    "metadata": {},
    "source": [
-    "## Classification\n",
-    "**thrs** of the classification function are the thresholds to classify water, bare soil and vegetation from the NDVI grey image, where values less than thr2 are considered as water. The value between thr3 and thr4 are considered as bare soil, and the value larger than thr5 are considered as vegetation. One thing should be noticed is that we are not going to use these threshold to classify the image. Instead, this classification are going to be used to select training set for the classifer. Thus, these thresholds are not accurite values. The threshold can be modified if the classifer does not perform well, but the default values are robust basing on our tests.\n",
-    "\n",
-    "**numPts** is the parameter to decide the number of points which are going to be selected as the training set."
+    "#### Classification\n",
+    "**thrs** of the classification function are the thresholds to classify water, bare soil and vegetation from the NDVI grey image, where values less than thr2 are considered as water. The value between thr3 and thr4 are considered as bare soil, and the value larger than thr5 are considered as vegetation. One thing should be noticed is that we are not going to use these threshold to classify the image. Instead, this classification are going to be used to select training set for the classifer. Thus, these thresholds are not accurite values. The threshold can be modified if the classifer does not perform well, but the default values are robust basing on our tests."
    ]
   },
   {
@@ -104,7 +110,7 @@
    "id": "d1021c04",
    "metadata": {},
    "source": [
-    "## River mask\n",
+    "#### River mask\n",
     "The river is identified and the mask is dilated for PlanetScope."
    ]
   },
@@ -133,7 +139,7 @@
    "id": "27196c87",
    "metadata": {},
    "source": [
-    "# Obtain river mask from the PlanetScope image\n",
+    "### Obtain river mask from the PlanetScope image\n",
     "This section demonstrates how to mask the clasified PlanetScope image and obtain a simply connected river mask."
    ]
   },
@@ -171,18 +177,7 @@
    "id": "547a9a83",
    "metadata": {},
    "source": [
-    "# Centerline extraction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76e72b1a",
-   "metadata": {},
-   "source": [
-    "## Medial Axis Transfrom (MAT)\n",
-    "1. The distance from the river pixels to the nearest non-river pixel is measured.\n",
-    "2. Compute the gradient of distance.\n",
-    "3. Thresholding out the centerline. Pixels with a value less than the given value is considered as centerline."
+    "### Centerline extraction"
    ]
   },
   {
@@ -225,14 +220,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "78e77f45",
-   "metadata": {},
-   "source": [
-    "## Remove noises caused by MAT and trim unwanted branches"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "c19d4c1b",
@@ -250,7 +237,7 @@
    "id": "0e26d5b3",
    "metadata": {},
    "source": [
-    "# Out put\n",
+    "### Out put\n",
     "The result is going to be output as an asset in Google Earth Engine. This process may take a long time. Please check the process of the test at the Code Editor of Google Earthe Engine."
    ]
   },
@@ -279,7 +266,7 @@
     "    'assetId': out_loc,\n",
     "    'scale': scl,\n",
     "    'maxPixels': 6e8,\n",
-    "  'region': roi\n",
+    "    'region': roi\n",
     "})\n",
     "task.start()"
    ]
@@ -289,7 +276,7 @@
    "id": "26ef1b08",
    "metadata": {},
    "source": [
-    "# Visualize the image\n",
+    "### Visualize the image\n",
     "Visualizing image can help you to check whether the parameters you selected is suitable."
    ]
   },
@@ -414,24 +401,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c28cd17",
+   "metadata": {},
+   "source": [
+    "## Load images and study area"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "3bb4e15e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IDs of images\n",
+    "# a .txt file with assit IDs of the Landsat images\n",
     "f = 'arkansas.txt'\n",
-    "ar_f = open(f).read().split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "ad4be9c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ar_f = open(f).read().split()\n",
     "# ID of the region of interest\n",
     "roi_id = \"users/luoyee1997/geeRiver/Arkansas/roi\"\n",
     "roi = load_file(roi_id)"
@@ -453,6 +439,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d37fb57",
+   "metadata": {},
+   "source": [
+    "## Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "88e212bb",
@@ -462,6 +456,14 @@
    "outputs": [],
    "source": [
     "classified = wrap_classification(ar_cl, thr2=0, thr3=0.2, thr4=0.3, thr5=0.6, numPts=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c407c565",
+   "metadata": {},
+   "source": [
+    "## Generate .gif from image collection"
    ]
   },
   {
